--- a/style.css
+++ b/style.css
@@ -1,7 +1,26 @@
 html {
-    background-color: rgba(255, 94, 0, 0.5);
+    background-color: rgba(255, 255, 255, 0.5);
 }
-
 body {
     text-align: center;
+}
+
+
+input {
+    text-align: center;
+}
+#add-or-remove::placeholder {
+    text-align: center;
+}
+
+
+button {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    border-radius: 10px;
+    transition: 1s;
+}
+button:hover {
+    border-radius: 0px;
+    cursor: pointer;
+    opacity: 0.7;
 }
